update to laboratory version 13